--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,128 @@
-body {
+*{
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "josefine Sans",Arial, sans-serif;
+}
+.main_div{
+  background:#6983aa;
+  width: 100%;
+height: 100vh;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: row;
+text-align: center;
+}
+.center_div{
+  width: 25%;
+  height: 80vh;
+  background-color: #f4f4f4;
+  box-shadow: 5px 5px 25px -5px rgba(0, 0,0, 0.5);
+  border-radius: 15px;
+}
+h1{
+  color: white;
+  background: transparent;
+  padding: 6px 0 2px 0;
+  margin-bottom: 10px;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+  background-color: #8566aa;
+}
+input{
+  height: 30px;
+  top: 10px;
+  border-color: rgb(184, 156, 211);
+  background: transparent;
+  font-size: 20px;
+  font-weight: 400;
+  width: 70%;
+  outline: none;
+  box-shadow: 2px solid #8566aa;
+border-radius: 35px;
+
+}
+button{
+  min-height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  /* border-color: #8566aa; */
+  background-color: #8566aa;
+  color: white;
+  border: none;
+  outline: none;
+  margin-left: 10px;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+}
+button:hover{
+  background-color: rgb(53, 33, 71);
+}
+ol{
+  margin-top: 30px;
+}
+ol li{
+  padding-left: 0px;
+  text-align: left;
+  font-size: 20px;
+  min-height: 40px;
+  display: flex;
+  align-items: center;
+  color: #8566aa;
+  text-transform: capitalize;
+}
+footer{
+  position: fixed;
+  left: 0;
+  bottom:50px;
+text-align: center;
+width: 100%;
+border-radius: 5px 10px 15px 5px rgba(0, 0 ,0,0.3);
+font-style: italic;
+color: white;
+}
+.todo_style{
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.todo_style .fa-times{
+  width: 20px ;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #8566aa;
+  border-radius: 50%;
+  margin: 0px 15px 0px 35px;
+  color: aliceblue;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
+.todo_style .fa-times:hover{
+  background-color: rgb(212, 77, 77);
+}
+.todo_style .fa-times:hover .list_style{
+  color: crimson;
+}
+@media(max-width :768px){
+  .center_div{width: 55%;}
+
+}
+.todo_style .fa-times{
+  margin: 0px 15px 0px 15px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+button{
+  margin-left: 5px;
+  min-height: 40px;
+  width: 40px;
+  color: #fff;
+  font-size: 30px;
+
+}
+
+
+
